--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
-@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap');
 
 .App {
-  text-align: center;
   max-width: 87.5rem;
   padding: 0 0 50px;
   box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
@@ -26,6 +24,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   background-color: #fff;
   box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
+  margin-bottom: 2rem;
 }
 
 .navbar nav {
@@ -47,7 +46,103 @@ body {
 .profile {
   border: solid 1px #e8e8e8;
   color: #0290ff;
-  padding: 6px 10px;
+  padding: 10px;
   border-radius: 50%;
   font-size: 25px;
+}
+
+.book {
+  border: solid 1px #e8e8e8;
+  border-radius: 4px;
+  background-color: #fff;
+  margin: 2.313rem 6.25rem 0;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.book-info * {
+  margin: 0;
+}
+
+.category {
+  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.875rem;
+  color: #121212;
+  opacity: 0.5;
+  margin-bottom: 10px;
+}
+
+.title {
+  font-size: 1.375rem;
+}
+
+.author {
+  font-size: 0.875rem;
+  font-weight: 300;
+  color: #4386bf;
+}
+
+.modify {
+  display: flex;
+  gap: 15px;
+  margin-top: 20px;
+}
+
+.modify * {
+  color: #4386bf;
+  font-weight: 300;
+}
+
+.remove {
+  border-left: solid 2px #e8e8e8;
+  border-right: solid 2px #e8e8e8;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.progress {
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.progress-info {
+  display: grid;
+}
+
+.spinner {
+  font-size: 50px;
+  color: #0290ff;
+}
+
+.percentage {
+  font-size: 2rem;
+}
+
+.completed {
+  opacity: 0.5;
+  font-size: 0.875rem;
+  color: #121212;
+}
+
+.remove-div {
+  border-left: solid 2px #e8e8e8;
+}
+
+.remove-div button {
+  background-color: #0290ff;
+  border: none;
+  outline: none;
+  width: 11.5rem;
+  height: 2.063rem;
+  margin: 0.75rem 0 0.563rem 3.688rem;
+  padding: 0.438rem 1.188rem 0.5rem 1.375rem;
+  border-radius: 3px;
+  color: #fff;
+  letter-spacing: 0.5px;
 }
