--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,7 @@ body {
   border-right: solid 2px #e8e8e8;
   padding-right: 10px;
   padding-left: 10px;
+  cursor: pointer;
 }
 
 .progress {
@@ -132,17 +133,61 @@ body {
 
 .remove-div {
   border-left: solid 2px #e8e8e8;
+  padding-left: 50px;
+  margin-right: 40px;
+  font-weight: 300;
 }
 
-.remove-div button {
+button {
   background-color: #0290ff;
+  font-family: 'Roboto Slab', sans-serif;
+  font-weight: 300;
   border: none;
   outline: none;
   width: 11.5rem;
   height: 2.063rem;
-  margin: 0.75rem 0 0.563rem 3.688rem;
-  padding: 0.438rem 1.188rem 0.5rem 1.375rem;
   border-radius: 3px;
   color: #fff;
   letter-spacing: 0.5px;
+}
+
+.chapter {
+  opacity: 0.5;
+  font-size: 0.813rem;
+  color: #121212;
+}
+
+.form-container {
+  border-top: solid 2px #e8e8e8;
+  margin: 2.313rem 6.25rem 0;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.form-container h2 {
+  color: #888;
+  font-size: 1.25rem;
+  font-weight: bold;
+  letter-spacing: -0.18px;
+}
+
+.form-container form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-container form input {
+  padding: 10px;
+  font-family: inherit;
+  border-radius: 4px;
+  border: solid 1px #e8e8e8;
+}
+
+.form-container form button {
+  width: 100px;
+  font-weight: bold;
+}
+
+.add-book {
+  width: 30.5rem;
 }
